WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22190
[Transforms] Fix use of absoluteBoundingBoxRect() in RenderThemeMac search field painting
https://bugs.webkit.org/show_bug.cgi?id=22190
Summary
[Transforms] Fix use of absoluteBoundingBoxRect() in RenderThemeMac search fi...
Simon Fraser (smfr)
Reported
2008-11-11 16:45:09 PST
RenderThemeMac::paintSearchFieldResultsDecoration() and RenderThemeMac::paintSearchFieldResultsButton() both call absoluteBoundingBoxRect() to get the bounds of the search field. This is not transform-friendly.
Attachments
Patch, testcase, changelog
(14.29 KB, patch)
2008-11-19 22:48 PST
,
Simon Fraser (smfr)
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2008-11-19 22:48:41 PST
Created
attachment 25302
[details]
Patch, testcase, changelog
Simon Fraser (smfr)
Comment 2
2008-11-20 08:43:10 PST
Committed
r38620
M WebCore/ChangeLog M WebCore/rendering/RenderObject.cpp M WebCore/rendering/RenderThemeMac.mm M WebCore/rendering/RenderBox.h M WebCore/rendering/RenderObject.h M WebCore/rendering/RenderTextControl.cpp M WebCore/rendering/RenderThemeMac.h A LayoutTests/platform/mac/fast/forms/search-transformed-expected.png A LayoutTests/platform/mac/fast/forms/search-transformed-expected.checksum A LayoutTests/platform/mac/fast/forms/search-transformed-expected.txt M LayoutTests/ChangeLog A LayoutTests/fast/forms/search-transformed.html
r38620
= 13a62b2369cd22dbe5178a26a12e2e0f033ac0c5 (trunk)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug